[gd_scene load_steps=6 format=3 uid="uid://dxp3dly66140i"]

[ext_resource type="Script" uid="uid://daitxqh70q62p" path="res://scripts/rotatingbullet.gd" id="1_s02u7"]
[ext_resource type="Texture2D" uid="uid://cj0om01w5fbsa" path="res://sprites/bullet.png" id="2_lwlhs"]

[sub_resource type="Animation" id="Animation_l5glv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bulletSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bulletSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y25gk"]
resource_name = "remove"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bulletSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bulletSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eoqba"]
_data = {
&"RESET": SubResource("Animation_l5glv"),
&"remove": SubResource("Animation_y25gk")
}

[node name="RotatingBullet" type="Node2D"]

[node name="Marker2D" type="Marker2D" parent="."]

[node name="RotatingBulletBody" type="Node2D" parent="Marker2D"]
position = Vector2(0, -50)
script = ExtResource("1_s02u7")

[node name="bulletSprite" type="Sprite2D" parent="Marker2D/RotatingBulletBody"]
texture = ExtResource("2_lwlhs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Marker2D/RotatingBulletBody"]
libraries = {
&"": SubResource("AnimationLibrary_eoqba")
}

[node name="RayCast2D" type="RayCast2D" parent="Marker2D/RotatingBulletBody"]
position = Vector2(-10, 0)
scale = Vector2(20, 20)
target_position = Vector2(1.45, 0)

[node name="DistanceTimeout" type="Timer" parent="Marker2D/RotatingBulletBody"]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="Marker2D/RotatingBulletBody/AnimationPlayer" to="Marker2D/RotatingBulletBody" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Marker2D/RotatingBulletBody/DistanceTimeout" to="Marker2D/RotatingBulletBody" method="_on_distance_timeout_timeout"]
